[gd_scene load_steps=5 format=2]

[ext_resource path="res://Stage3/SceneManager.gd" type="Script" id=1]
[ext_resource path="res://assets/horiz_paint_brush.png" type="Texture" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D transition_effect;
uniform float progress: hint_range(0.0, 1.0) = 0.0;

void fragment() {
	float transition_value = texture(transition_effect, UV).r;
	COLOR.rgb = texture(TEXTURE, UV).rgb;
	COLOR.a = float(transition_value >= progress);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/progress = 0.0
shader_param/transition_effect = ExtResource( 3 )

[node name="SceneManager" type="Node"]
script = ExtResource( 1 )
start_scene = "res://Stage3/Scene1.tscn"

[node name="BackLayer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="BackLayer"]
size = Vector2( 1024, 600 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="FrontLayer" type="ViewportContainer" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="FrontLayer"]
size = Vector2( 1024, 600 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="ColorRect" type="ColorRect" parent="FrontLayer/Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )

[node name="Tween" type="Tween" parent="."]
